<resources>
    <string name="app_name">Smart Environment</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_car">Car</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_living_room">Living Room</string>
    <string name="title_activity_kitchen">Kitchen</string>
    <string name="ok">OKAY</string>
    <string name="Current">You are currently in the %1$s Activity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="degrees">Degrees Celsius</string>
    <string name="garButton">Garage</string>
    <string name="ligButton">Light</string>
    <string name="editButton">Set Temperature</string>
</resources>
