<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:title="Main"
    tools:context="cst2335.smartenvironment.cst2335.smartenvironment.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/title_activity_kitchen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/kitchenButton"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/carButton"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/title_activity_living_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/livingRoomButton"
            android:layout_below="@+id/kitchenButton"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp" />

        <Button
            android:text="@string/title_activity_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/homeButton"
            android:layout_below="@+id/livingRoomButton"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp" />

        <Button
            android:text="@string/title_activity_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/carButton"
            android:layout_marginTop="60dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
