<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="cst2335.smartenvironment.Kitchen">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/kitchenImg"
            android:src="@drawable/oven"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="center"
            android:background="#cc0000"
            android:contentDescription="@string/app_name"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
             />

        <TextView
            android:id="@+id/customKitchenDialog"
            android:text="@string/Current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:layout_above="@+id/kitchenImg"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="false" />

        <Button
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/okButtonKitchen"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_alignBaseline="@+id/customKitchenDialog"
            android:layout_alignBottom="@+id/customKitchenDialog"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>
